--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@date-io/dayjs": "^1.3.13",
+    "@date-io/luxon": "^1.3.13",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.8",
@@ -12,8 +14,10 @@
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0-rc.1",
     "date-fns": "^2.8.1",
+    "dayjs": "^1.10.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "luxon": "^1.28.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
