--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/pickers": "^3.2.8",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "connected-react-router": "^6.9.1",
     "cookie-session": "^2.0.0-rc.1",
     "date-fns": "^2.8.1",
     "dayjs": "^1.10.6",
@@ -26,6 +27,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
